SMHE-1613: Add validation for capture objects in config
Signed-off-by: stefanermens <stefan.ermens@alliander.com>